[gd_scene load_steps=3 format=3 uid="uid://cyerdrm61isi0"]

[ext_resource type="Script" path="res://code/ui.gd" id="1_h1b74"]
[ext_resource type="FontFile" uid="uid://c5lt350go4m85" path="res://fonts/Quicksand-Bold.otf" id="2_qxa3q"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_h1b74")

[node name="Quit" type="PanelContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 42.0
offset_bottom = 47.0
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="Quit"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Quit/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="Quit/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxa3q")
theme_override_font_sizes/font_size = 24
text = "üè†"

[node name="Label" type="Label" parent="Quit/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxa3q")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="Turn" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 16.0
offset_right = -16.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_qxa3q")
theme_override_font_sizes/font_size = 24
text = "End turn"

[node name="Selection" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Selection"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="Selection/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Selection/Control/Title"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Selection/Control/Title/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Selection/Control/Title/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxa3q")

[node name="Stats" type="PanelContainer" parent="Selection/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Selection/Control/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Selection/Control/Stats/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Selection/Control/Stats/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxa3q")
text = "Action points: 5/10"

[node name="ScrollContainer" type="ScrollContainer" parent="Selection"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="Selection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Selection/ScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Actions" type="HBoxContainer" parent="Selection/ScrollContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Description" type="Label" parent="Selection/ScrollContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 135)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qxa3q")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="gui_input" from="Quit" to="." method="_on_quit_gui_input"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_quit_mouse_exited"]
